Fixed styling issues on smaller laptops

--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -8,6 +8,7 @@ h1, h2, h3 {
 
 h1 {
     font-size: 6rem;
+    text-align: center;
 }
 
 h2 {
