--- a/styles/layouts/_banner.scss
+++ b/styles/layouts/_banner.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 240px 0 150px 0;
+    padding: 240px 10% 150px 10%;
     background-image: $red-gradient;
     background-image: url('../images/bg-pattern-intro.svg'), $red-gradient;
     background-position: 20% center, 0 0;
